Completely changed the look to the nav bar, made images fluid, alleviated spacing issues around the header image.

--- a/airbnb_CloneV2/style.css
+++ b/airbnb_CloneV2/style.css
@@ -14,6 +14,7 @@
     width:600px;
     padding-top: 60px;
     padding-left: 30px;
+    
 }
 #articles{
     position: relative;
@@ -37,7 +38,13 @@
         right:10px;
     }
 }
-
+@media only screen and( max-width:768px){
+    #hero{
+        width:100%;
+        height:80%;
+        right:10px;
+    }
+}
 
 .footerSty{
     background-color: #f7f7f7;
